add ctest catch2 framework; add a test for glm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.7)
 
+# 3rdParty======================
+set(ROOT_3rdParty ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
+
 project(
     CPUPathTracing
     LANGUAGES CXX
@@ -11,3 +14,7 @@ add_subdirectory(thirdparty/glm)
 add_subdirectory(thirdparty/rapidobj)
 
 add_subdirectory(source)
+
+# test 
+enable_testing()
+add_subdirectory(test/glm) 
