--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,7 +2,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 file(GLOB_RECURSE source CONFIGURE_DEPENDS src/*.cpp)
 
-add_executable(CPUPathTracing ${source})
+add_library(CPUPathTracing ${source})
 
 target_include_directories(CPUPathTracing PUBLIC include)
 target_compile_definitions(CPUPathTracing PUBLIC GLM_FORCE_DEPTH_ZERO_TO_ONE GLM_FORCE_RADIANS GLM_FORCE_LEFT_HANDED)
