--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,9 @@
         "variant": "cpp",
         "vector": "cpp",
         "algorithm": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "MSVC",
+        "rapidobj"
+    ]
 }
